@@ -1,3 +1,6 @@
+2006-08-10  Jeremy Cribb <jcribb@email.unc.edu>
+	* DACoperator.m: Removed redundant text output when using the virtual dac board.
+
 2006-08-09  Kaplpit Desai <kvdesai@email.unc.edu>
 	* DACoperator.m: Fixed several errors in the documentation. Now in sync with the code.
 	
